# pitstopx

./: .gitignore  CLAUDE.md  README.md  TECHNICAL_SPEC.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  release.yml
pkg/arch/: PKGBUILD  pitstopx.desktop
scripts/: build-windows.ps1  gen-source-png.mjs  make-icon.mjs
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/pkg/: dev.britto.pitstopx.desktop
src-tauri/src/: actions.rs  app.rs  claude_source.rs  cli.rs  codex_source.rs  codex_usage.rs  credentials.rs  engine.rs  format.rs  lib.rs  linux_shortcut.rs  login.rs  main.rs  notify.rs  paths.rs  prefs.rs  profile_store.rs  provider.rs  source.rs  tray.rs  ui_events.rs  usage_api.rs
src-tauri/src/secrets/: encrypted_file.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/lib/: AccountRow.svelte  SettingsView.svelte  types.ts  usage.test.ts  usage.ts
